Issue #777: allow composite JSON values in mapping configuration.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>